--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   <div class="services container">
     <div class="service-top">
       <h1 class="section-title">Serv<span>i</span>ces</h1>
-      <p>I love to be unique, different from other people and one of the ways I've consciously tried to do that is by learning an extra skill, in order to be an added advantage to any organization I work for. Currently, I am learning video editing. Below are the services I can currently undertake</p>
+      <p>I love to be unique, different from others and one of the ways I've consciously tried to do that is by learning an extra skill, in order to be an added advantage to any organization I work for. Currently, I am learning video editing. Below are the services I can currently undertake</p>
     </div>
     <div class="service-bottom">
       <div class="service-item">
@@ -102,11 +102,11 @@
         <div class="project-info">
           <h1>Project 1</h1>
           <h2>My portfolio site</h2>
-          <p>I developed this portfolio site as an easy way for people to have an introduction to ADEOGUN OLUWASEMILOGO and to allow me showcase my work in a branded, visually appealing and organized manner</p>
+          <p>I developed this portfolio site as an easy way for people to have an introduction to ADEOGUN OLUWASEMILOGO and to allow me showcase my work in a branded, visually appealing and organized manner. Click <a href="#hero" style="color: orangered;">here</a> to check it out</p>
           <p><em>HTML, CSS AND JAVASCRIPT</em></p>
         </div>
         <div class="project-img">
-          <img src="folio.JPG"/>
+          <img src="folio.JPG" alt="portfolio page"/>
         </div>
       </div>
       </div>
@@ -155,7 +155,7 @@
 <div class="social-item">
 <a href="https://instagram.com/the_oluwasemilogo?igshid=ZDc4ODBmNjlmNQ==" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" alt="instagram"/></a>  </div>
 <div class="social-item">
-  <a href="www.linkedin.com/in/oluwasemilogo-adeogun-5a0b10242" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/linkedin.png" alt="linkedin"/></a>  </div>      
+  <a href="https://www.linkedin.com/in/oluwasemilogo-adeogun-5a0b10242/" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/linkedin.png" alt="linkedin"/></a>  </div>      
 <div class="social-item">
 <a href="https://tiktok.com/@the_oluwasemilogo" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/tiktok.png" alt="tiktok"/></a>  </div>
 </div>
