--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
   <div class="header container">
     <div class="nav-bar">
       <div class="brand">
-        <a href="#hero"><h1><span>A</span>deogun <span>S</span>emilogo</h1></a>
+        <a href="#home"><h1><span>A</span>deogun <span>S</span>emilogo</h1></a>
       </div>
       <div class="nav-list">
         <div class="hamburger">
           <div class="bar"></div>
         </div>
         <ul>
-          <li><a href="#hero" data-after="Home">Home</a></li>
+          <li><a href="#home" data-after="Home">Home</a></li>
           <li><a href="#about" data-after="About">About</a></li>
           <li><a href="#services" data-after="Services">Services</a></li>
           <li><a href="#projects" data-after="Projects">Projects</a></li>
@@ -39,14 +39,14 @@
 <!-- End of header -->
 
 
-<!-- hero section -->
-<section id="hero">
-  <div class="hero container">
+<!-- home section -->
+<section id="home">
+  <div class="home container">
     <div><h1>Hello, <span></span></h1><h1> My Name is <span></span></h1><h1>Semilogo<span></span></h1>
     <a href="#projects" type="button" class="cta">Portfolio</a>
     </div></div>
     <!-- 
-      End of hero section -->
+      End of home section -->
 </section>
 
         <!-- About section -->
@@ -102,7 +102,7 @@
         <div class="project-info">
           <h1>Project 1</h1>
           <h2>My portfolio site</h2>
-          <p>I developed this portfolio site as an easy way for people to have an introduction to ADEOGUN OLUWASEMILOGO and to allow me showcase my work in a branded, visually appealing and organized manner. Click <a href="#hero" style="color: orangered;">here</a> to check it out</p>
+          <p>I developed this portfolio site as an easy way for people to have an introduction to ADEOGUN OLUWASEMILOGO and to allow me showcase my work in a branded, visually appealing and organized manner. Click <a href="#home" style="color: orangered;">here</a> to check it out</p>
           <p><em>HTML, CSS AND JAVASCRIPT</em></p>
         </div>
         <div class="project-img">
@@ -156,7 +156,9 @@
 <a href="https://instagram.com/the_oluwasemilogo?igshid=ZDc4ODBmNjlmNQ==" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" alt="instagram"/></a>  </div>
 <div class="social-item">
   <a href="https://www.linkedin.com/in/oluwasemilogo-adeogun-5a0b10242/" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/linkedin.png" alt="linkedin"/></a>  </div>      
-<div class="social-item">
+  <div class="social-item">
+    <a href="https://github.com/semilogopaul" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/github.png" alt="github"/></a>  </div>        
+  <div class="social-item">
 <a href="https://tiktok.com/@the_oluwasemilogo" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/tiktok.png" alt="tiktok"/></a>  </div>
 </div>
       <p>Copyright &copy 2023 Adeogun. All rights reserved</p>
