--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
           <h1>Project 1</h1>
           <h2>My portfolio site</h2>
           <p>I developed this portfolio site as an easy way for people to have an introduction to ADEOGUN OLUWASEMILOGO and to allow me showcase my work in a branded, visually appealing and organized manner. Click <a href="#home" style="color: orangered;">here</a> to check it out</p>
-          <p><em>HTML, CSS AND JAVASCRIPT</em></p>
+          <p class="stack-used"><em>HTML, CSS AND JAVASCRIPT</em></p>
         </div>
         <div class="project-img">
           <img src="folio.JPG" alt="portfolio page"/>
