--- a/index.html
+++ b/index.html
@@ -28,7 +28,6 @@
         <ul>
           <li><a href="#home" data-after="Home">Home</a></li>
           <li><a href="#about" data-after="About">About</a></li>
-          <li><a href="#services" data-after="Services">Services</a></li>
           <li><a href="#projects" data-after="Projects">Projects</a></li>
           <li><a href="#contact" data-after="Contact">Contact</a></li>
         </ul>
@@ -54,7 +53,7 @@
   <div class="about container">
     <div class="col-left">
       <div class="about-img">
-        <img src="https://png.pngtree.com/png-clipart/20210424/ourlarge/pngtree-orange-tie-in-the-distribution-cartoon-character-avatar-png-image_3232216.png" alt="laptop">
+        <img src="avatar.PNG" alt="laptop">
       </div>
     </div>
     <div class="col-right">
@@ -67,29 +66,6 @@
 </section>
         <!-- End of about section -->
 
-   <!-- service section -->
-<section id="services">
-  <div class="services container">
-    <div class="service-top">
-      <h1 class="section-title">Serv<span>i</span>ces</h1>
-      <p>I love to be unique, different from others and one of the ways I've consciously tried to do that is by learning an extra skill, in order to be an added advantage to any organization I work for. Currently, I am learning video editing. Below are the services I can currently undertake</p>
-    </div>
-    <div class="service-bottom">
-      <div class="service-item">
-        <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="services"/></div> 
-        <h2>Web development</h2> 
-        <p>I develop responsive and captivating websites that elevates brands and engages users</p>  
-      </div>
-      <div class="service-item">
-        <div class="icon"><img src="https://img.icons8.com/bubbles/100/000000/services.png" alt="services"/></div> 
-        <h2>Graphics design</h2> 
-        <p>I design eye-catching visuals, logos, and marketing materials that reflects your brand's identity</p>  
-      </div>
-    </div>    
-  </div>
-</section>
-      <!-- End of service section -->
-
 
        <!-- Project section -->
 <section id="projects">
@@ -101,12 +77,56 @@
       <div class="project-item">
         <div class="project-info">
           <h1>Project 1</h1>
-          <h2>My portfolio site</h2>
-          <p>I developed this portfolio site as an easy way for people to have an introduction to ADEOGUN OLUWASEMILOGO and to allow me showcase my work in a branded, visually appealing and organized manner. Click <a href="#home" style="color: orangered;">here</a> to check it out</p>
-          <p class="stack-used"><em>HTML, CSS AND JAVASCRIPT</em></p>
+          <h2>Vendor Search App</h2>
+          <p>A voluntarily built web app that extracts vendor data from excel files and presents them on the front-end in a beautiful way for Zeta-Web Nigeria Limited during my internship period with them for easier data accessibility and efficiency. Click <a href="https://vendor-search.vercel.app/" style="color: orangered;" target="_blank">here</a> to check it out</p>
+          <p class="stack-used"><em>HTML, CSS, JAVASCRIPT</em></p>
         </div>
         <div class="project-img">
-          <img src="folio.JPG" alt="portfolio page"/>
+          <img src="zeta-vendor.png" alt="vendor-search-app-image"/>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <h1>Project 2</h1>
+          <h2>Littlemon API</h2>
+          <p>Developed an API for the LittleLemon Restaurant for reservation management and other functions, implementing token-based authentication, throttling, and pagination to ensure secure and efficient API usage. The API supports multiple response formats, including JSON and XML. Additionally, I integrated the Django Debug Toolbar to facilitate easy debugging. Click <a href="https://github.com/semilogopaul/littlelemon" style="color: orangered;" target="_blank">here</a> to check it out</p>
+          <p class="stack-used"><em>PYTHON, DJANGO, DJANGO-REST FRAMEWORK, HTML, CSS, JAVASCRIPT, DJOSER</em></p>
+        </div>
+        <div class="project-img">
+          <img src="littlelemon.PNG" alt="littlelemon-page"/>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <h1>Project 3</h1>
+          <h2>Mini JPMorgan Trader Dashboard</h2>
+          <p>I fixed the broken client datafeed script in the jpmc forage github repository, I also fixed broken typescript files in the repository to make the web application output correctly and finally, I utilized JPMorgan's Perspective software to generate a live graph that displays a data feed in a clear and visually appealing way for traders to monitor. Click <a href="https://github.com/semilogopaul/forage-jpmc-swe-task-3" style="color: orangered;" target="_blank">here</a> to check it out</p>
+          <p class="stack-used"><em>PYTHON, TYPESCRIPT, REACT, HTML, CSS, JAVASCRIPT</em></p>
+        </div>
+        <div class="project-img">
+          <img src="jpmc-graph.PNG" alt="jpmc-graph"/>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <h1>Project 4</h1>
+          <h2>Personal Finance Tracker</h2>
+          <p>Personal Finance Tracker with the ability to track and log different transactions, organize them (using pandas), get summaries of income and expenses, and view those data in a graph (using matplotlib) so you can see how much you're making month over month. Click <a href="https://github.com/semilogopaul/Personal-Finance-Tracker" style="color: orangered;" target="_blank">here</a> to check it out</p>
+          <p class="stack-used"><em>PYTHON, PANDAS, MATPLOTLIB</em></p>
+        </div>
+        <div class="project-img">
+          <img src="finance-graph.PNG" alt="finance-graph"/>
+        </div>
+      </div>
+      <div class="project-item">
+        <div class="project-info">
+          <h1>Project 5</h1>
+          <h2>Nike Landing Page</h2>
+          <p>A beautiful nike shoes landing page built while learning react and tailwind. Click <a href="https://github.com/semilogopaul/nike-landing-page" style="color: orangered;" target="_blank">here</a> to check it out</p>
+          <p class="stack-used"><em>TYPESCRIPT, TAILWIND, REACT, HTML, CSS, JAVASCRIPT</em></p>
+        </div>
+        <div class="project-img">
+          <img src="nike-page.PNG" alt="nike-page"/>
         </div>
       </div>
       </div>
