updated the index file

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
           <h1>Project 2</h1>
           <h2>Littlemon API</h2>
           <p>Developed an API for the LittleLemon Restaurant for reservation management and other functions, implementing token-based authentication, throttling, and pagination to ensure secure and efficient API usage. The API supports multiple response formats, including JSON and XML. Additionally, I integrated the Django Debug Toolbar to facilitate easy debugging. Click <a href="https://github.com/semilogopaul/littlelemon" style="color: orangered;" target="_blank">here</a> to check it out</p>
-          <p class="stack-used"><em>PYTHON, DJANGO, DJANGO-REST FRAMEWORK, HTML, CSS, JAVASCRIPT, DJOSER</em></p>
+          <p class="stack-used"><em>PYTHON, DJANGO, DJANGO-REST FRAMEWORK, SQL, HTML, CSS, JAVASCRIPT, DJOSER</em></p>
         </div>
         <div class="project-img">
           <img src="littlelemon.PNG" alt="littlelemon-page"/>
