--- a/index.html
+++ b/index.html
@@ -129,6 +129,17 @@
           <img src="nike-page.PNG" alt="nike-page"/>
         </div>
       </div>
+      <div class="project-item">
+        <div class="project-info">
+          <h1>Project 6</h1>
+          <h2>Portfolio Website</h2>
+          <p>I developed this portfolio website to showcase my work in a branded, visually appealing and organized manner. Click <a href="#home" style="color: orangered;" target="_blank">here</a> to check it out</p>
+          <p class="stack-used"><em>HTML, CSS, JAVASCRIPT</em></p>
+        </div>
+        <div class="project-img">
+          <img src="folio.JPG" alt="portfolio-hero"/>
+        </div>
+      </div>
       </div>
   </div>
 </section>
