updated project-item 6

--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
         <div class="project-info">
           <h1>Project 6</h1>
           <h2>Portfolio Website</h2>
-          <p>I developed this portfolio website to showcase my work in a branded, visually appealing and organized manner. Click <a href="" style="color: orangered;" target="_blank">here</a> to check it out</p>
+          <p>Portfolio website to showcase my work in a branded, visually appealing and organized manner. Click <a href="" style="color: orangered;" target="_blank">here</a> to check it out</p>
           <p class="stack-used"><em>HTML, CSS, JAVASCRIPT</em></p>
         </div>
         <div class="project-img">
