updated the index file

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
       <div class="project-item">
         <div class="project-info">
           <h1>Project 3</h1>
-          <h2>Mini JPMorgan Trader Dashboard</h2>
+          <h2>Mini Trader Dashboard</h2>
           <p>I fixed the broken client datafeed script in the jpmc forage github repository, I also fixed broken typescript files in the repository to make the web application output correctly and finally, I utilized JPMorgan's Perspective software to generate a live graph that displays a data feed in a clear and visually appealing way for traders to monitor. Click <a href="https://github.com/semilogopaul/forage-jpmc-swe-task-3" style="color: orangered;" target="_blank">here</a> to check it out</p>
           <p class="stack-used"><em>PYTHON, TYPESCRIPT, REACT, HTML, CSS, JAVASCRIPT</em></p>
         </div>
