--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
           <p class="stack-used"><em>HTML, CSS, JAVASCRIPT</em></p>
         </div>
         <div class="project-img">
-          <img src="zeta-vendor.png" alt="vendor-search-app-image"/>
+          <img src="vendor-search.PNG" alt="vendor-search-app-image"/>
         </div>
       </div>
       <div class="project-item">
