changed the brand name on smaller screens

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
   <div class="header container">
     <div class="nav-bar">
       <div class="brand">
-        <a href="#home"><h1><span>A</span>deogun <span>S</span>emilogo</h1></a>
+        <a href="#home"><h1><span id="last-name"><span class="first-letter">A</span>deogun</span> <span class="first-letter">S</span>emilogo</h1></a>
       </div>
       <div class="nav-list">
         <div class="hamburger">
