--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 <!-- home section -->
 <section id="home">
   <div class="home container">
-    <div><h1>Hello, <span></span></h1><h1> My Name is <span></span></h1><h1>Semilogo<span></span></h1>
+    <div><h1>Hello, <span></span></h1><h1> My&nbsp;Name&nbsp;is <span></span></h1><h1>Semilogo<span></span></h1>
     <a href="#projects" type="button" class="cta">Portfolio</a>
     </div></div>
     <!-- 
