--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 <section id="footer">
   <div class="footer container">
     <div class="brand"><h1><span>A</span>deogun <span>S</span>emilogo</h1></div>
-    <h2>Your Complete Web Solution</h2><div class="social-icon">
+    <h2>Software Engineer</h2><div class="social-icon">
 <div class="social-item">
 <a href="https://instagram.com/the_oluwasemilogo?igshid=ZDc4ODBmNjlmNQ==" target="_blank"><img src="https://img.icons8.com/bubbles/100/000000/instagram-new.png" alt="instagram"/></a>  </div>
 <div class="social-item">
