--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
       <h1 class="section-title">About <span>Me</span></h1>
       <h2>Software Engineer</h2>
       <p>I am a creative problem-solver constantly seeking innovative solutions that push the boundaries of what's possible. With a collaborative mindset, I thrive in team environments utilizing diverse perspectives to drive impactful outcomes. I am passionate about technology and driven by a desire to make a difference.</p>
-      <a href="" class="cta" target="_blank">Download Resume</a>
+      <a href="#" class="cta" target="_blank">Download Resume</a>
     </div>
   </div>
 </section>
