revert:"custom for WP"
This reverts commit 5ef19f381ed375c74e694d2658ff214ae2dfbcde.

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Adeogun Oluwasemilogo Portfolio Site" />
+    <meta name="description" content="Adeogun Semilogo Portfolio Site" />
     <meta
       name="keywords"
       content="web developer, portfolio, frontend developer, software engineer, website, web, seo, search engine optimization"
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="logo.jpg" />
-    <title>Adeogun Oluwasemilogo Portfolio Site</title>
+    <title>Adeogun Semilogo Portfolio Site</title>
   </head>
   <body>
     <!-- Header section -->
@@ -70,23 +70,13 @@
           <h1 class="section-title">About <span>Me</span></h1>
           <h2>Software Engineer</h2>
           <p>
-            I am a first-class software engineering student at Babcock
-            University. I am a tech guru with expertise in both no-code
-            (WordPress, ...) and high-code (Django, React, Tailwind ...) tools,
-            some of the technologies i use are HTML, CSS, wordpress, Javascript,
-            Typescript, SQL, React, Redux, Tailwind, Bootstrap, SASS, Jquery,
-            Django, Django-Rest Framework. I am currently the CTO of a startup
-            called Poolup, which I led to attract investors, one of whom was
-            once mentored by billionaire Tony Elumelu. I believe in innovating
-            wherever you find yourself; we should always strive to solve
-            problems. One way I have demonstrated this is by voluntarily
-            building a web app that extracts vendor data from Excel files and
-            presents them on the front-end in a beautiful way for Zeta-Web
-            Nigeria Limited during my internship period with them for easier
-            data accessibility and efficiency which earned me a recommendation
-            from the Head of Technology.
+            I am a creative problem-solver constantly seeking innovative
+            solutions that push the boundaries of what's possible. With a
+            collaborative mindset, I thrive in team environments utilizing
+            diverse perspectives to drive impactful outcomes. I am passionate
+            about technology and driven by a desire to make a difference.
           </p>
-          <a href="#" class="cta">Download Resume</a>
+          <a href="" class="cta" target="_blank">Download Resume</a>
         </div>
       </div>
     </section>
@@ -102,116 +92,6 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 1</h1>
-              <h2>GobuyHub</h2>
-              <p>
-                GobuyHub Canada website. Click
-                <a
-                  href="https://gobuyhub.com/"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used"><em>wordpress (elementor)</em></p>
-            </div>
-            <div class="project-img">
-              <img src="gobuy.png" alt="vendor-search-app-image" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 2</h1>
-              <h2>Fountain of Hope</h2>
-              <p>
-                Fountain of Hope Church Canada ecommerce website. Click
-                <a
-                  href="https://fountainofhopemhc.org/cards/"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used">
-                <em>wordpress (elementor, woocommerce)</em>
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="hope.png" alt="vendor-search-app-image" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 3</h1>
-              <h2>Zeta-Web Business Solutions</h2>
-              <p>
-                Zeta-Web Business Solutions website (affiliated with
-                multichoice). Click
-                <a
-                  href="https://zbs.zeta-web.com/"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used">
-                <em>wordpress (elementor)</em>
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="zbs.png" alt="vendor-search-app-image" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 4</h1>
-              <h2>Zeta-Web Nigeria Limited</h2>
-              <p>
-                Zeta-Web Nigeria Limited website (affiliated with multichoice).
-                Click
-                <a
-                  href="https://znl.zeta-web.com/"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used">
-                <em>wordpress (wpbakery)</em>
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="znl.png" alt="vendor-search-app-image" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 5</h1>
-              <h2>WebExperts</h2>
-              <p>
-                WebExperts website. Click
-                <a
-                  href="https://webexperts.ng/"
-                  style="color: orangered"
-                  target="_blank"
-                  >here</a
-                >
-                to check it out
-              </p>
-              <p class="stack-used">
-                <em>wordpress (gutenberg)</em>
-              </p>
-            </div>
-            <div class="project-img">
-              <img src="web.png" alt="vendor-search-app-image" />
-            </div>
-          </div>
-          <div class="project-item">
-            <div class="project-info">
-              <h1>Project 6</h1>
               <h2>Vendor Search App</h2>
               <p>
                 A voluntarily built web app that extracts vendor data from excel
@@ -234,7 +114,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 7</h1>
+              <h1>Project 2</h1>
               <h2>Littlemon API</h2>
               <p>
                 Developed an API for the LittleLemon Restaurant for reservation
@@ -264,7 +144,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 8</h1>
+              <h1>Project 3</h1>
               <h2>Trader Dashboard</h2>
               <p>
                 I fixed the broken client datafeed script in the jpmc forage
@@ -291,7 +171,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 9</h1>
+              <h1>Project 4</h1>
               <h2>Personal Finance Tracker</h2>
               <p>
                 Personal Finance Tracker with the ability to track and log
@@ -315,7 +195,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 10</h1>
+              <h1>Project 5</h1>
               <h2>Nike Landing Page</h2>
               <p>
                 A beautiful nike shoes landing page built while learning react
@@ -338,7 +218,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 11</h1>
+              <h1>Project 6</h1>
               <h2>Portfolio Website</h2>
               <p>
                 Portfolio website to showcase my work in a branded, visually
@@ -423,6 +303,15 @@
             /></a>
           </div>
           <div class="social-item">
+            <a
+              href="https://www.linkedin.com/in/oluwasemilogo-adeogun-5a0b10242/"
+              target="_blank"
+              ><img
+                src="https://img.icons8.com/bubbles/100/000000/linkedin.png"
+                alt="linkedin"
+            /></a>
+          </div>
+          <div class="social-item">
             <a href="https://github.com/semilogopaul" target="_blank"
               ><img
                 src="https://img.icons8.com/bubbles/100/000000/github.png"
@@ -437,7 +326,7 @@
             /></a>
           </div>
         </div>
-        <p>Copyright &copy 2025 Adeogun. All rights reserved</p>
+        <p>Copyright &copy 2024 Adeogun. All rights reserved</p>
       </div>
     </section>
     <!-- End of footer section -->
