--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 2</h1>
+              <h1>Project 2</h1>
               <h2>Littlemon API</h2>
               <p>
                 Developed an API for the LittleLemon Restaurant for reservation
@@ -145,6 +146,7 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 3</h1>
+              <h1>Project 3</h1>
               <h2>Trader Dashboard</h2>
               <p>
                 I fixed the broken client datafeed script in the jpmc forage
@@ -172,6 +174,7 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 4</h1>
+              <h1>Project 4</h1>
               <h2>Personal Finance Tracker</h2>
               <p>
                 Personal Finance Tracker with the ability to track and log
@@ -196,6 +199,7 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 5</h1>
+              <h1>Project 5</h1>
               <h2>Nike Landing Page</h2>
               <p>
                 A beautiful nike shoes landing page built while learning react
@@ -218,6 +222,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
+              <h1>Project 6</h1>
               <h1>Project 6</h1>
               <h2>Portfolio Website</h2>
               <p>
