--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     />
     <link rel="stylesheet" href="styles.css" />
     <link rel="icon" type="image/x-icon" href="logo.jpg" />
-    <title>Adeogun Semilogo Portfolio Site</title>
+    <title>Adeogun Oluwasemilogo Portfolio Site</title>
   </head>
   <body>
     <!-- Header section -->
