feat: added my latest project to the project's list

--- a/index.html
+++ b/index.html
@@ -92,6 +92,38 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 1</h1>
+              <h2>Rate-a-School</h2>
+              <p>
+                Developed a web application that allows users to rate schools
+                and share their experiences to promote transparency and enable
+                informed decision-making for parents and guardians. It was
+                primarily designed to tackle issues of bullying and poor school
+                quality by providing a platform for community-driven feedback.
+                Implemented features for rating, commenting, and filtering
+                schools by name and location. Employed secure authentication and
+                data protection measures to ensure user privacy. Click
+                <a
+                  href="https://github.com/semilogopaul/rateaschool"
+                  style="color: orangered"
+                  target="_blank"
+                  >here</a
+                >
+                to check it out
+              </p>
+              <p class="stack-used">
+                <em
+                  >REACT, TYPESCRIPT, TAILWIND, DJANGO, DJANGO-REST
+                  FRAMEWORK</em
+                >
+              </p>
+            </div>
+            <div class="project-img">
+              <img src="Rate-a-school.png" alt="Rate-a-School-image" />
+            </div>
+          </div>
+          <div class="project-item">
+            <div class="project-info">
+              <h1>Project 2</h1>
               <h2>Vendor Search App</h2>
               <p>
                 A voluntarily built web app that extracts vendor data from excel
@@ -114,7 +146,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 2</h1>
+              <h1>Project 3</h1>
               <h2>Littlemon API</h2>
               <p>
                 Developed an API for the LittleLemon Restaurant for reservation
@@ -144,7 +176,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 3</h1>
+              <h1>Project 4</h1>
               <h2>Trader Dashboard</h2>
               <p>
                 I fixed the broken client datafeed script in the jpmc forage
@@ -171,7 +203,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 4</h1>
+              <h1>Project 5</h1>
               <h2>Personal Finance Tracker</h2>
               <p>
                 Personal Finance Tracker with the ability to track and log
@@ -195,7 +227,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 5</h1>
+              <h1>Project 6</h1>
               <h2>Nike Landing Page</h2>
               <p>
                 A beautiful nike shoes landing page built while learning react
@@ -218,7 +250,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 6</h1>
+              <h1>Project 7</h1>
               <h2>Portfolio Website</h2>
               <p>
                 Portfolio website to showcase my work in a branded, visually
