refactor: added diy-analytics

--- a/index.html
+++ b/index.html
@@ -177,6 +177,31 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 4</h1>
+              <h2>DIY Analytics</h2>
+              <p>
+                DIY Analytics is a no-code tool for analyzing and visualizing
+                data using 'natural language' and drag-drop-click features. All
+                you have to do is upload a dataset!! How interesting is that!
+                Click
+                <a
+                  href="https://github.com/semilogopaul/ds-ml-ai-trac"
+                  style="color: orangered"
+                  target="_blank"
+                  >here</a
+                >
+                to check it out
+              </p>
+              <p class="stack-used">
+                <em>PYTHON</em>
+              </p>
+            </div>
+            <div class="project-img">
+              <img src="DIY-ANALYTICS.png" alt="DIY-ANALYTICS" />
+            </div>
+          </div>
+          <div class="project-item">
+            <div class="project-info">
+              <h1>Project 5</h1>
               <h2>Trader Dashboard</h2>
               <p>
                 I fixed the broken client datafeed script in the jpmc forage
@@ -203,7 +228,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 5</h1>
+              <h1>Project 6</h1>
               <h2>Personal Finance Tracker</h2>
               <p>
                 Personal Finance Tracker with the ability to track and log
@@ -227,7 +252,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 6</h1>
+              <h1>Project 7</h1>
               <h2>Nike Landing Page</h2>
               <p>
                 A beautiful nike shoes landing page built while learning react
@@ -250,7 +275,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 7</h1>
+              <h1>Project 8</h1>
               <h2>Portfolio Website</h2>
               <p>
                 Portfolio website to showcase my work in a branded, visually
