feat: updated the description for Rate-a-school

--- a/index.html
+++ b/index.html
@@ -95,13 +95,17 @@
               <h2>Rate-a-School</h2>
               <p>
                 Developed a web application that allows users to rate schools
-                and share their experiences to promote transparency and enable
+                and share their experiences, utilizing AI-driven feedback to
+                help schools identify areas for improvement and enhance customer
+                satisfaction. The platform promotes transparency and enables
                 informed decision-making for parents and guardians. It was
-                primarily designed to tackle issues of bullying and poor school
-                quality by providing a platform for community-driven feedback.
-                Implemented features for rating, commenting, and filtering
-                schools by name and location. Employed secure authentication and
-                data protection measures to ensure user privacy. Click
+                designed to address issues such as bullying and poor school
+                quality by facilitating community-driven feedback. Features
+                include school ratings, commenting, and filtering by name and
+                location, alongside AI tools that analyze feedback to provide
+                actionable insights for schools. Implemented secure
+                authentication and robust data protection measures to ensure
+                user privacy. Click
                 <a
                   href="https://github.com/semilogopaul/rateaschool"
                   style="color: orangered"
