refactor: updated the description for Rate-a-school

--- a/index.html
+++ b/index.html
@@ -100,12 +100,9 @@
                 satisfaction. The platform promotes transparency and enables
                 informed decision-making for parents and guardians. It was
                 designed to address issues such as bullying and poor school
-                quality by facilitating community-driven feedback. Features
-                include school ratings, commenting, and filtering by name and
-                location, alongside AI tools that analyze feedback to provide
-                actionable insights for schools. Implemented secure
-                authentication and robust data protection measures to ensure
-                user privacy. Click
+                quality by facilitating community-driven feedback. Implemented
+                secure authentication and robust data protection measures to
+                ensure user privacy. Click
                 <a
                   href="https://github.com/semilogopaul/rateaschool"
                   style="color: orangered"
