feat: decided to add iphone project

--- a/index.html
+++ b/index.html
@@ -203,6 +203,28 @@
           <div class="project-item">
             <div class="project-info">
               <h1>Project 5</h1>
+              <h2>Iphone 15</h2>
+              <p>
+                Created a luxurious, interactive iPhone 15 landing page utilizing GSAP for smooth animations and Three.js for 3D elements, providing an engaging web experience while practicing advanced web development techniques. Click
+                <a
+                  href="https://adeogun-iphone.netlify.app/"
+                  style="color: orangered"
+                  target="_blank"
+                  >here</a
+                >
+                to check it out
+              </p>
+              <p class="tech-used">
+                <em>REACT, JAVASCRIPT, THREE.JS, GSAP (Greensock), TAILWIND</em>
+              </p>
+            </div>
+            <div class="project-img">
+              <img src="iPhone.png" alt="iPhone" />
+            </div>
+          </div>
+          <div class="project-item">
+            <div class="project-info">
+              <h1>Project 6</h1>
               <h2>Trader Dashboard</h2>
               <p>
                 I fixed the broken client datafeed script in the jpmc forage
@@ -229,7 +251,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 6</h1>
+              <h1>Project 7</h1>
               <h2>Personal Finance Tracker</h2>
               <p>
                 Personal Finance Tracker with the ability to track and log
@@ -253,7 +275,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 7</h1>
+              <h1>Project 8</h1>
               <h2>Nike Landing Page</h2>
               <p>
                 A beautiful nike shoes landing page built while learning react
@@ -276,7 +298,7 @@
           </div>
           <div class="project-item">
             <div class="project-info">
-              <h1>Project 8</h1>
+              <h1>Project 9</h1>
               <h2>Portfolio Website</h2>
               <p>
                 Portfolio website to showcase my work in a branded, visually
